package com.example.app.domain.enums;

public enum TipoFuncionario {
    GESTOR,
    ESTOQUISTA,
    VENDEDOR
}